[project]
name = "pubmed-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe",email = "johndoe@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
